--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -630,7 +630,7 @@
 			<key>Badge Top Margin</key>
 			<real>10</real>
 			<key>Blinking Cursor</key>
-			<true/>
+			<false/>
 			<key>Blur</key>
 			<false/>
 			<key>Bold Color</key>
@@ -698,7 +698,7 @@
 				<real>0.67058825492858887</real>
 			</dict>
 			<key>Cursor Type</key>
-			<integer>1</integer>
+			<integer>2</integer>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
@@ -1613,7 +1613,7 @@
 			<key>Badge Top Margin</key>
 			<real>10</real>
 			<key>Blinking Cursor</key>
-			<true/>
+			<false/>
 			<key>Blur</key>
 			<false/>
 			<key>Bold Color</key>
@@ -1681,7 +1681,7 @@
 				<real>0.67058825492858887</real>
 			</dict>
 			<key>Cursor Type</key>
-			<integer>1</integer>
+			<integer>2</integer>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
@@ -2598,7 +2598,7 @@
 			<key>Badge Top Margin</key>
 			<real>10</real>
 			<key>Blinking Cursor</key>
-			<true/>
+			<false/>
 			<key>Blur</key>
 			<false/>
 			<key>Bold Color</key>
@@ -2666,7 +2666,7 @@
 				<real>0.67058825492858887</real>
 			</dict>
 			<key>Cursor Type</key>
-			<integer>1</integer>
+			<integer>2</integer>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
@@ -3583,7 +3583,7 @@
 			<key>Badge Top Margin</key>
 			<real>10</real>
 			<key>Blinking Cursor</key>
-			<true/>
+			<false/>
 			<key>Blur</key>
 			<false/>
 			<key>Bold Color</key>
@@ -3653,7 +3653,7 @@
 				<real>0.67058825492858887</real>
 			</dict>
 			<key>Cursor Type</key>
-			<integer>1</integer>
+			<integer>2</integer>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
@@ -4572,7 +4572,7 @@
 			<key>Badge Top Margin</key>
 			<real>10</real>
 			<key>Blinking Cursor</key>
-			<true/>
+			<false/>
 			<key>Blur</key>
 			<false/>
 			<key>Bold Color</key>
@@ -4640,7 +4640,7 @@
 				<real>0.67058825492858887</real>
 			</dict>
 			<key>Cursor Type</key>
-			<integer>1</integer>
+			<integer>2</integer>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
