--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -737,7 +737,7 @@
 			<key>Idle Code</key>
 			<integer>0</integer>
 			<key>Initial Text</key>
-			<string></string>
+			<string>sendTextAtStart</string>
 			<key>Initial Use Transparency</key>
 			<true/>
 			<key>Jobs to Ignore</key>
