feat: update plist

--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -4367,7 +4367,7 @@
 	<key>SeparateStatusBarsPerPane</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>ShowPaneTitles</key>
 	<false/>
 	<key>SoundForEsc</key>
